fix(web/Spaces): multiple UI fixes for Spaces for small screens (#7479)
* fix: no overlap on mobile screens in the widget

* fix: topbar fixes for mobile screens

* fix: Account Widget styles on mobile screens

* fix: toggle switch styles for light mode

--- a/apps/web/src/components/common/PageLayout/styles.module.css
+++ b/apps/web/src/components/common/PageLayout/styles.module.css
@@ -4,6 +4,12 @@
   @apply absolute top-0 right-0 z-[1];
 }
 
+@media (max-width: 767px) {
+  .topbar {
+    @apply left-0;
+  }
+}
+
 .mainSpace {
   /* we need it in order to have higher importance than the .main class */
   && {
